# ballistica

./: .dockerignore  .editorconfig  .efrocachemap  .gitattributes  .gitignore  .gitmodules  .projectile  CHANGELOG.md  CHANGELOG_API_VERSIONS.md  CHANGELOG_BSU.md  CONTRIBUTORS.md  CodeQL.yml  Directrices.yml  Dockerfile  Documentación.yml  LICENSE  Makefile  Python.yml  README.Md  README.md  Readme.md  aura_overload_fx.py  baAllMaps (1).py  bob_plugin.py  buildanglewindows.ps1  do_stuff  snowfallModz.py  test.html  test_import.py
.claude/: settings.json
.devcontainer/: devcontainer.json
.flatpak-builder/checksums/: x86_64-net.froemling.BombSquad.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md  feature_request.md  question.md  want-to-discuss-something-or-ask-a-question-.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  deploy_docs.yml  docker_arm.yml  flathub.yml  nightly.yml  release.yml  test.yml  test2.yml
.woodpecker/: Dockerfile  ballistica_dev_dockerfile  ballistica_dev_image.yaml  cd.yaml  ci.yaml  ci_build_and_test_windows.yaml  ci_check.yaml  ci_check_linux.yaml  ci_spinoff_test.yaml  deploy_docs.yaml  release.yaml  trigger.yaml
.woodpecker/ci/: build_and_test.yaml  feature_set_copy_test.yaml
.woodpecker/wip/: ci_build_and_test_linux.yaml  ci_build_and_test_windows.yaml  ci_feature_set_copy_test_linux.yaml  ci_spinoff_test_linux.yaml
assets/: .asset_manifest_1.json  .asset_manifest_2.json  .asset_manifest_private.json  .asset_manifest_public.json  Makefile  manifest.json
ballisticacore-cmake/: CMakeLists.txt
ballisticacore-windows/Generic/: BallisticaCore.rc  BallisticaCoreGeneric.vcxproj  BallisticaCoreGeneric.vcxproj.filters  Resource.h  stdafx.h
ballisticacore-windows/Headless/: BallisticaCoreHeadless.vcxproj  BallisticaCoreHeadless.vcxproj.filters  stdafx.h
ballisticakit-android/: CMakeLists.txt
ballisticakit-cmake/: CMakeLists.txt
ballisticakit-windows/: Directory.Build.props
ballisticakit-windows/Generic/: BallisticaKit.rc  BallisticaKitGeneric.vcxproj  BallisticaKitGeneric.vcxproj.filters  Resource.h  stdafx.cpp  stdafx.h
ballisticakit-windows/Headless/: BallisticaKitHeadless.vcxproj  BallisticaKitHeadless.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
config/: README.md  config.json  projectconfig.json  requirements.txt  requirements_lock.txt  spinoffconfig.py  test_ex_durations
config/docker/: Dockerfile  Dockerfile_alpine  Dockerfile_arm64  Dockerfile_test  docker-compose.yml
config/featuresets/: README.md  featureset_base.py  featureset_classic.py  featureset_core.py  featureset_plus.py  featureset_potencia.py  featureset_scene_v1.py  featureset_scene_v1_lib.py  featureset_std.py  featureset_template_fs.py  featureset_ui_v1.py  featureset_ui_v1_lib.py
config/flatpak/: generate_manifest.py  net.froemling.BombSquad.appdata.xml  net.froemling.BombSquad.desktop  net.froemling.BombSquad.yml  net.froemling.bombsquad.desktop  net.froemling.bombsquad.yml  net.froemling.bombsquad.yml.template
config/toolconfigsrc/: README  README.md  clang-format  dir-locals.el  editorconfig  mypy.ini  projectile  pycheckers  pylintrc  pyrightconfig.json  pyrightconfig.toml  pyrightconfig.yaml  style.yapf
docs/: ba_module.md
docs/design/: angle-windows.md  api-versions.md  apple-file-lists.md  apple-python-build.md  apple-swift-concurrency.md  blessing.md  codegen.md  discord.md  engine-asset-loading.md  hardware-cursors.md  ios-tvos-app-platform.md  network-availability.md  os-font-rendering.md  prefab-symbols.md  premultiplied-alpha.md  python-api-packages.md  spinoff.md
docs/initiatives/: angle-on-apple.md  asyncio-eventloop-integration.md  sdl-type-decoupling.md
pconfig/: README.md  projectconfig.json  requirements.txt  requirements_lock.txt  spinoffconfig.py
pconfig/docker/: Dockerfile  docker-compose.yml
pconfig/featuresets/: README.md  featureset_base.py  featureset_classic.py  featureset_core.py  featureset_plus.py  featureset_scene_v1.py  featureset_scene_v1_lib.py  featureset_template_fs.py  featureset_ui_v1.py  featureset_ui_v1_lib.py
pconfig/flatpak/: net.froemling.bombsquad.releases.xml  net.froemling.bombsquad.yml  net.froemling.bombsquad.yml.template
pconfig/toolconfigsrc/: clang-format  dir-locals.el  editorconfig  pylintrc  rgignore
resources/: Makefile  README.md
src/: README.md
src/assets/: .asset_manifest_private.json  .asset_manifest_public.json  Makefile  README.md
src/ballistica/: README.md  ballistica.cc  ballistica.h
src/codegen/: .codegen_manifest_public.json  Makefile  README.md
src/generated_src/: Makefile  README.md
src/meta/: .meta_manifest_public.json  Makefile  README.md
src/resources/: Makefile  README.md
tests/: conftest.py  restapi_test_fixtures.py
tests/test_ba/: test_assetmanager.py
tests/test_babase/: test_imports.py
tests/test_bafoundation/: test_entities.py
tests/test_base/: test_assetmanager.py  test_held_logs.py  test_imports.py  test_lang_str.py  test_object.py  test_shutdown_watchdog.py
tests/test_classic/: test_imports.py
tests/test_efro/: test_dataclasses.py  test_dataclassio.py  test_dataclassutils.py  test_entities.py  test_entity.py  test_message.py  test_rpc.py  test_rpcws.py  test_threadpool.py  test_util.py
tests/test_plus/: test_imports.py  test_insecure_connections_mode.py  test_insecure_directive.py  test_network_availability_gating.py  test_securedata_native.py  test_transport.py
tests/test_rest/: conftest.py  test_rest_v1.py
tests/test_restapi/: conftest.py  test_restapi_v1.py
tests/test_scene_v1/: test_imports.py
tests/test_template_fs/: test_imports.py
tests/test_ui_v1/: test_imports.py
tools/: README.md  bacloud  bacommon  cloudtool  compile_python_files  efro  pcommand  snippets  spinoff  stage_assets  staging_server_upkeep  update_angle_apple.py  update_angle_windows.ps1  update_assets_makefile  update_project
tools/bacommon/: __init__.py  analytics.py  app.py  assetcas.py  assets.py  bacloud.py  bob_v1.zstddict  bs.py  build.py  clienteffect.py  (+18 more)
(+2651 files in other folders)
